Port 1.21.1 c5966c943: Preserve selected candidates across recipe interactions